[package]
name = "hatch"
version = "0.1.0"
edition = "2021"
authors = ["Gleicon Moraes <gleicon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
log4rs = "1.1.1"
log = "0.4.17"
kube = "0.73.1"
k8s-openapi = { version = "0.15.0",  default-features = false, features = ["v1_19"] } 
serde_json = "1.0.81"